# SMS-Lab

./: .gitignore  README.md
Mid_term-Project/smart_city/devel/: .catkin  .rosinstall
Mid_term-Project/smart_city/devel/include/smart_city/: WeatherServiceRequest.h  WeatherServiceResponse.h  WeatherStatus.h
Mid_term-Project/smart_city/devel/lib/pkgconfig/: smart_city.pc
Mid_term-Project/smart_city/devel/lib/python3/dist-packages/smart_city/msg/: _GPSLocation.py  _VehicleInfo.py
Mid_term-Project/smart_city/devel/lib/python3/dist-packages/smart_city/srv/: _WeatherService.py
Mid_term-Project/smart_city/devel/lib/smart_city/: user_input  weather_service_client  weather_service_server
Mid_term-Project/smart_city/devel/share/common-lisp/ros/smart_city/msg/: WeatherStatus.lisp  _package.lisp  _package_GPSLocation.lisp  _package_WeatherStatus.lisp  smart_city-msg.asd
Mid_term-Project/smart_city/devel/share/common-lisp/ros/smart_city/srv/: _package_WeatherService.lisp  smart_city-srv.asd
Mid_term-Project/smart_city/devel/share/gennodejs/ros/smart_city/msg/: WeatherStatus.js  _index.js
Mid_term-Project/smart_city/devel/share/gennodejs/ros/smart_city/srv/: WeatherService.js
Mid_term-Project/smart_city/devel/share/roseus/ros/smart_city/msg/: GPSLocation.l  WeatherStatus.l
Mid_term-Project/smart_city/devel/share/roseus/ros/smart_city/srv/: WeatherService.l
Mid_term-Project/smart_city/devel/share/smart_city/cmake/: smart_city-msg-extras.cmake  smart_city-msg-paths.cmake  smart_cityConfig.cmake
Mid_term-Project/smart_city/install/include/smart_city/: GPSLocation.h  VehicleInfo.h  WeatherService.h  WeatherServiceRequest.h  WeatherServiceResponse.h
Mid_term-Project/smart_city/install/lib/pkgconfig/: smart_city.pc
Mid_term-Project/smart_city/install/lib/python3/dist-packages/smart_city/msg/: _WeatherStatus.py  __init__.py
Mid_term-Project/smart_city/install/share/common-lisp/ros/smart_city/msg/: GPSLocation.lisp  VehicleInfo.lisp  WeatherStatus.lisp  _package.lisp  _package_VehicleInfo.lisp  _package_WeatherStatus.lisp  smart_city-msg.asd
Mid_term-Project/smart_city/install/share/common-lisp/ros/smart_city/srv/: WeatherService.lisp  _package.lisp  _package_WeatherService.lisp  smart_city-srv.asd
Mid_term-Project/smart_city/install/share/roseus/ros/smart_city/: manifest.l
Mid_term-Project/smart_city/install/share/smart_city/cmake/: smart_city-msg-paths.cmake
Mid_term-Project/smart_city/install/share/smart_city/msg/: VehicleInfo.msg
Mid_term-Project/smart_city/src/smart_city/: CMakeLists.txt  package.xml
Mid_term-Project/smart_city/src/smart_city/launch/: vehicle_speed.launch
Mid_term-Project/smart_city/src/smart_city/msg/: WeatherStatus.msg
Mid_term-Project/smart_city/src/smart_city/src/: speed_controller.py  speed_publisher.py  speed_subscriber.py  user_input.cpp  weather_service_client.cpp  weather_service_server.cpp
Mid_term-Project/smart_city/src/smart_city/srv/: WeatherService.srv
sms-project-7/bag/: robot_position.bag  robot_status.bag
week-3/: test.txt
week4_Homework_1/catkin_ws/devel/: .catkin  setup.sh
week4_Homework_1/catkin_ws/devel/lib/pkgconfig/: talker_listener.pc
week4_Homework_1/catkin_ws/devel/lib/talker_listener/: listener  talker
week4_Homework_1/catkin_ws/devel/share/talker_listener/cmake/: talker_listenerConfig.cmake
week4_Homework_1/catkin_ws/src/talker_listener/: CMakeLists.txt
week4_Homework_1/catkin_ws/src/talker_listener/src/: listener.cpp  talker.cpp
week5_Homework_2/catkin_ws/homework2_ws/devel/: .catkin  .rosinstall  local_setup.sh
week5_Homework_2/catkin_ws/homework2_ws/devel/lib/pkgconfig/: homework2_python.pc
week5_Homework_2/catkin_ws/homework2_ws/devel/share/homework2_python/cmake/: homework2_pythonConfig.cmake
week5_Homework_2/catkin_ws/homework2_ws/src/homework2_python/: CMakeLists.txt
week5_Homework_2/catkin_ws/homework2_ws/src/homework2_python/src/: rpm_publisher.py  speed_publisher.py
week6_homework3/catkin_make/src/homework_3/: CMakeLists.txt  package.xml
week6_homework3/catkin_make/src/homework_3/config/: parameters.yaml
week6_homework3/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
week6_homework3/catkin_ws/devel/lib/pkgconfig/: homework_3.pc
week6_homework3/catkin_ws/devel/share/homework_3/cmake/: homework_3Config.cmake
week6_homework3/catkin_ws/src/homework_3/: CMakeLists.txt
week6_homework3/catkin_ws/src/homework_3/config/: parameters.yaml
week6_homework3/catkin_ws/src/homework_3/src/: param_publisher.py  param_subscriber.py
week7_homework_4/catkin_ws/homework4_ws/devel/: .catkin  setup.sh
week7_homework_4/catkin_ws/homework4_ws/devel/lib/homework_4/: rpm_pub.py
week7_homework_4/catkin_ws/homework4_ws/devel/lib/pkgconfig/: homework_4.pc
week7_homework_4/catkin_ws/homework4_ws/devel/share/homework_4/cmake/: homework_4-msg-paths.cmake  homework_4Config.cmake
week7_homework_4/catkin_ws/homework4_ws/install/: .rosinstall  setup.sh
week7_homework_4/catkin_ws/homework4_ws/install/include/homework_4/: OddEvenCheck.h  OddEvenCheckRequest.h  OddEvenCheckResponse.h
week7_homework_4/catkin_ws/homework4_ws/install/lib/homework_4/: rpm_pub.py  service_client.py
week7_homework_4/catkin_ws/homework4_ws/install/lib/pkgconfig/: homework_4.pc
week7_homework_4/catkin_ws/homework4_ws/install/share/homework_4/: package.xml
week7_homework_4/catkin_ws/homework4_ws/install/share/homework_4/cmake/: homework_4-msg-extras.cmake  homework_4Config.cmake
week7_homework_4/catkin_ws/homework4_ws/src/homework_4/: CMakeLists.txt
week7_homework_4/catkin_ws/homework4_ws/src/homework_4/launch/: rpm_sim.launch  speed_sim.launch
(+15 files in other folders)
